Feat refactorización extrema